--- a/WineQualClassification.ipynb
+++ b/WineQualClassification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WineQualClassification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODGIBFpEB+9TPJdW453G8b",
+      "authorship_tag": "ABX9TyPE4GIa65X/8TEnajOTWYHm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,15 +29,27 @@
       "metadata": {
         "id": "xOoKT_nGLvM9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9073e0d7-4ada-40bd-878d-99a0577131ae"
       },
       "source": [
         "from google.colab import drive\n",
         "import pandas as pd\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -128,18 +140,103 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HFTHRBwGWmIo",
+        "id": "TX-xvk-sJtEy",
         "colab_type": "code",
         "colab": {}
+      },
+      "source": [
+        "df = Null_test(df)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HFTHRBwGWmIo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "f65cb140-1e7f-48d0-928d-990b4c4dee5e"
       },
       "source": [
         "# THIS IS the quality funcction\n",
         "# It is in progress\n",
         "# ROW decison needs to be added\n",
+        "comulative_quality=[]\n",
         "for column in df:\n",
-        "  attr_quality = df[column].isnull().value_counts().iloc[0]/len(df)\n",
-        "  if attr_quality > 0.1:\n",
-        "    df = df.drop([column], axis=1)"
+        "  quality = df[column].isnull().value_counts()\n",
+        "  comulative_quality.append(quality[0])\n",
+        "  if quality.iloc[0]/len(df) > 0.9:\n",
+        "    df = df.drop([column], axis=1)\n",
+        "  elif sum(comulative_quality)/(len(df)*len(df.columns)) > 0.15:\n",
+        "    print('mlkia')\n",
+        "    print(comulative_quality)"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907, 2975]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907, 2975, 2903]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907, 2975, 2903, 2904]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907, 2975, 2903, 2904, 2962]\n",
+            "mlkia\n",
+            "[2923, 2919, 2975, 2890, 2912, 2913, 2864, 2907, 2975, 2903, 2904, 2962, 2843]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "38ufnEMGJaR1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "106207a3-0b91-4666-fded-bb89c33222bf"
+      },
+      "source": [
+        "print(comulative_quality)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "56620\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1MAPVEmNLqDU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "comulative_quality = sum(comulative_quality)"
       ],
       "execution_count": 0,
       "outputs": []
