--- a/Spark_Classification.ipynb
+++ b/Spark_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Spark Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCMV/J6z3H4GFmMAWUmdUr",
+      "authorship_tag": "ABX9TyOr7DSN6L/yOr2yJarHNUuC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
         "colab": {}
       },
       "source": [
-        "# Update to a specific Java version which is compatibel with Pyspark\n",
+        "# Update to a specific Java version which is compatible with Pyspark\n",
         "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
         "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
         "!update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
